--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Mobile-Tracker</string>
-    <string name="missed_call">Rejected call</string>
+    <string name="missed_call">Missed call</string>
     <string name="incoming_call">Incoming call</string>
     <string name="didnt_connect">Didn\'t connect</string>
     <string name="outgoing_call">Outgoing call</string>
