conversation chat is added to every person in message logs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="notifications">Notifications</string>
     <string name="share">Share</string>
     <string name="info">Info</string>
+    <string name="you">you</string>
 </resources>
