changes in notifications service

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="share">Share</string>
     <string name="info">Info</string>
     <string name="you">you</string>
+    <string name="full_message_activity">technology.nine.mobile_tracker.ChatActivity</string>
 </resources>
