--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="small_icon">smallIcon</string>
     <string name="large_icon">largeIcon</string>
     <string name="extra_picture">extraPicture</string>
+    <string name="go_to_notification_access">Go To Notification Access</string>
 </resources>
