--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,4 +102,10 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="clear">Clear</string>
+    <string name="next">Next</string>
+    <string name="draw_an_unlock_pattern">Draw an unlock pattern</string>
+    <string name="confirm">Confirm</string>
+    <string name="draw_pattern_again_to_confirm">Draw pattern again to confirm</string>
+    <string name="connect_at_four_dots">Connect at least 4 dots. Try again.</string>
 </resources>
